# API-nex

./: .env.example  README.md  aws_lambda_deploy_steps.txt  lambda_function.py  pyproject.toml
app/: __init__.py  requirements-dev.txt  requirements.txt
app/jobs/create/: page.tsx
app/src/: main.py
app/src/aws_services/: dynamodb_service.py
app/src/controllers/: api_v1.py  candidaturas_controller.py  companies_controller.py  items_controller.py  users_controller.py  vagas_controller.py
app/src/domain/: base_entity.py  repositories.py
app/src/helpers/: custom_exception.py  dynamodb.py  errors.py  format_data.py  logging.py  object_id.py  pagination.py  settings.py  utils.py
app/src/models/: base.py  candidatura.py  company.py  item.py  user.py  vaga.py
app/src/services/: base.py  candidaturas_service.py  companies_service.py  items_service.py  users_service.py  vagas_service.py
app/src/services/repositories/: dynamo_candidaturas_repository.py  dynamo_companies_repository.py  dynamo_items_repository.py  dynamo_users_repository.py  dynamo_vagas_repository.py  mongo_candidaturas_repository.py  mongo_companies_repository.py  mongo_items_repository.py  mongo_users_repository.py  mongo_vagas_repository.py
app/tests/: conftest.py  demo_vagas_requests.py  test_candidaturas_controller.py  test_candidaturas_service.py  test_companies_controller.py  test_companies_service.py  test_items_controller.py  test_items_service.py  test_users_controller.py  test_users_service.py  test_vagas_controller.py  test_vagas_service.py
